Update test for registerProtocolHandler() to include decentralized schemes
This adds "ethereum", "dat", "dweb", "ipfs", "ipns", "ssb", "cabal"
and "hyper" as discussed in https://github.com/whatwg/html/pull/5482

--- a/html/webappapis/system-state-and-capabilities/the-navigator-object/protocol.https.html
+++ b/html/webappapis/system-state-and-capabilities/the-navigator-object/protocol.https.html
@@ -156,8 +156,15 @@ test(() => {
   /* safelisted schemes listed in
    * https://html.spec.whatwg.org/multipage/system-state.html#safelisted-scheme */
   'bitcoin',
+  'cabal',
+  'dat',
+  'dweb',
+  'ethereum',
   'geo',
+  'hyper',
   'im',
+  'ipfs',
+  'ipns',
   'irc',
   'ircs',
   'magnet',
@@ -169,6 +176,7 @@ test(() => {
   'sip',
   'sms',
   'smsto',
+  'ssb',
   'ssh',
   'tel',
   'urn',
